AminWeb/Areas/Admin/Content/Styles/style.css
/* ... */
.categry-body {
    height: 250px;
    overflow-y: scroll;
}

.select-category {
    background-color: #e3e3e3;
}

.custom-file-input {
    cursor: pointer;
}

.gallery-box {
    border: 1px solid #ddd;
    border-radius: 3px;
    min-height: 200px;
}

.modal {
    z-index: 11000 !important;
    width: 2000px !important;
}

.modal-backdrop {
    z-index: 10000 !important;
}

.modal-gallery-image-box {
    position: relative;
    height: 113px;
    width: 113px;
    margin-bottom: 5px;
}

    .modal-gallery-image-box span {
        position: absolute;
        top: 4px;
        right: 5px;
        cursor: pointer;
    }

.modal-gallery-content {
    height: 400px;
    overflow-y: scroll;
    overflow-x: hidden;
}

.gallery-image-box {
    position: relative;
    height: 90px;
    width: 90px;
    margin-bottom: 5px;
}

    .gallery-image-box span {
        position: absolute;
        top: 0;
        left: 0;
        cursor: pointer;
    }

.gallery-image {
    height: inherit !important;
    width: inherit !important;
}

#preview-container {
    position: relative;
    width: 200px;
    height: 200px;
}


#preview-image {
    border: 1px solid #ddd;
    border-radius: 4px;
}

#delete-image {
    position: absolute;
    top: 0;
    left: 0;
    cursor: pointer;
}

#upload-dialog {
    cursor: pointer;
}

.modal-version-content {
    height: 400px;
    overflow-y: scroll;
    overflow-x: hidden;
}

@media only screen and (max-width: 992px) {
    .flex-div-row {
        overflow: auto;
    }
}

li.page-item {
    margin-left: 10px;
}

.shadow-full {
    box-shadow: 0 0 .25rem #ddd;
}

table.hot-download {
    color: #828282;
}

.hot-download-image img {
    width: 50px;
    border-radius: 10px;
}

table.hot-download td {
    vertical-align: middle;
}

.package-information span.icon {
    padding: 9px;
    border-radius: 5px;
    text-align: center;
    background-position: center center;
}


.package-information .icon-pic {
    font-size: 20px;
    padding: 0;
    vertical-align: middle;
    line-height: 0;
}

.package-information .icon-primary {
    background-color: #e1f0ff;
}

.package-information .icon-pic-primary {
    color: #3699FF;
}

.package-information .icon-success {
    background-color: #c9f7f5;
}

.package-information .icon-pic-success {
    color: #1bc5bd;
}

.package-information .icon-warning {
    background-color: #fff4de;
    padding-right: 12px !important;
    padding-left: 12px !important;
}

.package-information .icon-pic-warning {
    color: #ffa800;
    font-size: 22px;
}

.package-information .icon-info {
    background-color: #eee5ff;
}

.package-information .icon-pic-info {
    color: #8950FC;
}

.user-box.rounded {
    border-radius: 1rem !important;
}

.user-box .user-icon .fa, .user-icon .fas {
    font-size: 35px;
}

.user-box .user-title {
    font-size: 15px;
    font-weight: normal;
}

.user-box .user-count {
    font-size: 18px;
}

.card-body.user-card-bg {
    height: 200px;
}

.card-body.user-content {
    margin-top: -130px;
}

.last-feed {
    height: 177px;
    overflow: scroll;
    overflow-x: hidden;
}

.comment-icon .fas, .comment-icon .fa {
    font-size: 20px;
}

.slider-image img {
    width: 1140px;
    height: 400px;
}

.slider-button {
    position: absolute;
    bottom: 15%;
    left: 10%;
    box-shadow: 0px 5px 5px rgb(0 0 0 / 45%);
    width: 200px;
}

    .slider-button button {
        background: #fff;
        width: 100%;
        border-radius: 0;
        font-size: 14px;
    }


.modal-content-slider {
    height: 400px;
}

.slider-button {
    position: absolute;
    bottom: 15%;
    left: 10%;
    box-shadow: 0px 5px 5px rgb(0 0 0 / 45%);
    width: 200px;
}

.modal-content-slider {
    height: 400px;
}

.slider-button {
    position: absolute;
    bottom: 15%;
    left: 10%;
    box-shadow: 0px 5px 5px rgb(0 0 0 / 45%);
    width: 200px;
}

    .slider-button button {
        background: #fff;
        width: 100%;
        border-radius: 0;
        font-size: 14px;
    }

.document-image-box {
    position: relative;
    height: 113px;
    width: 113px;
    margin-bottom: 5px;
}

    .document-image-box span.document-image {
        position: absolute;
        bottom: 0;
        left: 0;
        cursor: pointer;
    }

.cover {
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    background-color: rgba(255, 255, 255, 0.5);
    border: 1px solid #ddd;
    border-radius: 3px;
}

.grid-2x2 {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
}

.image {
    max-width: 200px;
    max-height: 200px;
    -o-object-fit: contain;
    object-fit: contain;
    -o-object-position: center;
    object-position: center;
}

.grid-auto-250px {
    display: grid;
    grid-template-rows: auto;
    grid-gap: 24px;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
}

